--- a/app/src/main/res/layout/content_crop_inventory_fertilizer_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_fertilizer_manager.xml
@@ -22,9 +22,9 @@
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
 
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -53,8 +53,8 @@
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
                     >
 
                     <TextView
@@ -83,9 +83,9 @@
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
 
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -179,7 +179,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Quantity"
-                        android:layout_weight="0.7"
+                        android:layout_weight="0.8"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold" />
 
@@ -187,7 +187,7 @@
                         android:id="@+id/txt_crop_fertilizer_qty"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.3"
+                        android:layout_weight="0.2"
                         android:hint="Enter.."
                         android:background="@drawable/input_shapes"
 
@@ -320,7 +320,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Cost"
-                    android:layout_weight="0.7"
+                    android:layout_weight="0.8"
 
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold" />
@@ -334,7 +334,7 @@
                     android:inputType="numberDecimal"
                     android:background="@drawable/input_shapes"
 
-                    android:layout_weight="0.3"
+                    android:layout_weight="0.2"
                     android:textSize="14sp"
                     android:visibility="visible" />
 
