--- a/app/src/main/res/drawable-xhdpi-v4/input_shapes.xml
+++ b/app/src/main/res/drawable-xhdpi-v4/input_shapes.xml
@@ -2,8 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/colorPrimary" />
-
+            <solid android:color="@color/gray_mh" />
             <padding
                 android:bottom="2dp"
                 android:left="2dp"
